--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-agentName = ""
+agentName = "xxx"
 COMMERCE_VERSION = ''
 
 pipeline {
@@ -8,14 +8,17 @@ pipeline {
         stage('Prep') {
             steps {
                 script {
+                    println agentName
                     COMMERCE_VERSION = sh (
                         script: 'grep commerceSuiteVersion manifest.json | cut -d\':\' -f2 |sed \'s/[",]//g\'',
                         returnStdout: true
                     ).trim()
+                    println agentName
                     agentName = "commerce-agent-" + COMMERCE_VERSION
                     if (! agentName.contains('.')) {
                       agentName += ':latest'
                     }
+                    println agentName
                     sh 'echo "Test" > test.txt'
                     sh 'ls -al'
                 }
